# webrepl

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  control.sh  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
backend/: .gitignore  CLAUDE.md  docker-compose.yml  test.sh
backend/bash/: CLAUDE.md  Dockerfile  main.py  test.sh
backend/bash/tests/: .dockerignore  Dockerfile  docker-compose.yml  test.py
backend/haskell/: CLAUDE.md  Dockerfile  Main.hs  haskell-repl.cabal
backend/javascript/: CLAUDE.md  Dockerfile  errorHandler.js  package.json  server.js  sessionManager.js  test.sh  test_api.js
backend/javascript/tests/: docker-compose.yml  test.py
backend/kotlin/: CLAUDE.md  Dockerfile  build.gradle.kts  settings.gradle.kts  test_api.kt
backend/perl/: CLAUDE.md  Dockerfile  main.py
backend/php/: CLAUDE.md  Dockerfile  server.php  test.sh  test_api.php
backend/php/tests/: Dockerfile  docker-compose.yml  test.py
backend/python/: CLAUDE.md  Makefile  error_handler.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  session_manager.py  test_api.py
backend/ruby/: CLAUDE.md  Dockerfile  Gemfile  app.rb  test_api.rb
backend/session-manager/: CLAUDE.md  Dockerfile  database.py  main.py  requirements.txt
frontend/: .env  CLAUDE.md  Dockerfile  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/config/: constants.ts  languages.ts
(+33 files in other folders)
