cabal-version:      2.4
name:               haskell-repl
version:            0.1.0.0

executable haskell-repl
    main-is:          Main.hs
    build-depends:    base >=4.14 && <5
                    , scotty
                    , aeson
                    , text
                    , containers
                    , http-types
                    , wai-cors
                    , hint
                    , transformers
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N